# rusty_game

./: Cargo.toml  README.md  TODO.md  index.html
.github/workflows/: bump-version.yaml  release.yaml  tests.yaml
assets/forest/Assets/: Tiles.aseprite  Trees.aseprite
assets/forest/Social/: All.aseprite  All.png~  Cover.aseprite  MockUp-01.aseprite
assets/ldtk/: levels.ldtk
src/: animation.rs  camera.rs  cursor_indicator.rs  door.rs  game_logs.rs  game_state.rs  gamepad.rs  input.rs  interaction.rs  level.rs  main.rs  movement.rs  physics_bundle.rs  player.rs  test_utils.rs
