[package]
name = "turn_based_pvp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["dynamic"] }
bevy_ecs_ldtk = "0.5.0"
bevy_rapier2d = { version = "0.20.0", features = ["debug-render-2d"] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
