[package]
name = "onyx"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.9.1", default-features = false,  features = ["dynamic"] }
bevy_ecs_ldtk = "0.5.0"
bevy_rapier2d = { version = "0.20.0", features = ["debug-render-2d"] }

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
