[package]
name = "onyx"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.10.0" }
bevy_rapier2d = { version = "0.21.0", features = ["debug-render-2d", "wasm-bindgen"] }
bevy_ecs_ldtk = { git = "https://github.com/Trouv/bevy_ecs_ldtk.git", branch = "main", features=["atlas"] }
bevy_ggrs = { git = "https://github.com/johanhelsing/bevy_ggrs.git", branch = "bevy-0.10-refactor" }
ggrs = { git = "https://github.com/gschup/ggrs.git", features = ["sync-send"] }
bytemuck = "1.13.1"

[target.wasm32-unknown-unknown]
runner = "wasm-server-runner"

[dev-dependencies]
serial_test = "1.0.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[patch.crates-io]
bevy_ecs_tilemap = { git = "https://github.com/geieredgar/bevy_ecs_tilemap", branch = "bevy_track" }

